--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="./Develop/style.css" />
+   <link rel="stylesheet" href="./Develop/style.css " />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -41,17 +41,6 @@
       <btn id="helloWorld">Test DOM</btn>
     </header>
     <div class="container-lg px-5">
-      <!-- Use class for "past", "present", and "future" to apply styles to the
-        time-block divs accordingly. The javascript will need to do this by
-        adding/removing these classes on each div by comparing the hour in the
-        id to the current hour. The html provided below is meant to be an example
-        demonstrating how the css provided can be leveraged to create the
-        desired layout and colors. The html below should be removed or updated
-        in the finished product. Remember to delete this comment once the
-        code is implemented.
-        -->
-
-      <!-- Example of a past time block. The "past" class adds a gray background color. -->
       <div id="9" class="hours">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
@@ -60,7 +49,6 @@
         </button>
       </div>
 
-      <!-- Example of a a present time block. The "present" class adds a red background color. -->
       <div id="10" class="hours">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
@@ -69,7 +57,6 @@
         </button>
       </div>
 
-      <!-- Example of a future time block. The "future" class adds a green background color. -->
       <div id="11" class="hours">
         <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
@@ -133,6 +120,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./Develop/script.js"></script>
+    <script src="./Develop/script.js""></script>
   </body>
 </html>
